--- a/CAP08_CHALLENGE/chatbot-console-project/package.json
+++ b/CAP08_CHALLENGE/chatbot-console-project/package.json
@@ -16,6 +16,9 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.10.0",
     "jest": "^29.7.0",
